@@ -544,11 +544,8 @@ namespace bt
 		available_chunks.clear();
 		started = false;
 		ServerInterface::removePeerManager(this);
-		// Use copy so that connectors can be safely emptied
-		QSet<PeerConnector*> connectors_copy = connectors;
-		foreach (PeerConnector* pcon,connectors_copy)
-			pcon->stop();
-		
+		qDeleteAll(connectors);
+		connectors.clear();
 		num_pending = 0;
 	}
 
